--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "bootstrap": "^4.0.0-beta.3",
     "ejs": "^2.5.7",
     "express": "^4.16.2"
   },
