--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0-beta.3",
     "ejs": "^2.5.7",
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "knex": "^0.14.2",
+    "pg": "^7.4.0"
   },
   "devDependencies": {
     "nodemon": "^1.14.7"
